--- a/src/app/fonts.css
+++ b/src/app/fonts.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Avenir';
   src: url('/fonts/avenir.ttf') format('truetype');
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
